--- a/templates/include/top.html
+++ b/templates/include/top.html
@@ -3,9 +3,18 @@
 
 <div id="top" class="clear">
     <div id="top_left">
-        <span class="top_font">喵,欢迎来到天猫</span>
-        <span><a href="#" class="top_font">请登录</a></span>
-        <span><a href="#" class="top_font">免费注册</a></span>
+        {% if request.user.is_authenticated %}
+
+            <span>Hi ,<a href="#" class="top_font">{{ request.user.username }}</a></span>
+            <span><a href="#" class="top_font">积分</a></span>
+            <span><a href="#" class="top_font">消息</a></span>
+            <span><a href="{% url 'logout' %}" class="top_font">退出</a></span>
+        {% else %}
+            <span class="top_font">喵,欢迎来到天猫</span>
+            <span><a href="{% url 'login' %}" class="top_font">请登录</a></span>
+            <span><a href="{% url 'register' %}" class="top_font">免费注册</a></span>
+        {% endif %}
+
     </div>
     <div id="top_right">
         <span><a href="#" class="top_font">我的淘宝</a><span class="glyphicon glyphicon-triangle-bottom"></span></span>
