--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,7 @@
             width: 800px;
             height: 600px;
             background: white;
+            display: none;
         }
 
         .sub div {
