--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <title>
         {% block title %}
-    
+
         {% endblock %}
     </title>
     <link href="{% static 'css/common.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     {% block css %}
 
     {% endblock %}
     {% block jq %}
-    
+
     {% endblock %}
 </head>
 <body>
