--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -1,5 +1,5 @@
 {% include 'include/navigation.html' %}
-<div style="width: 100%;height: 600px">
+<div style="width: 100%;height: 600px;position: relative">
 {% include 'include/category.html' %}
 {% include 'include/banner.html' %}
 </div>
