--- a/apps/user/templates/login_page.html
+++ b/apps/user/templates/login_page.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
+{% block css %}
+    <style type="text/css">
+        img.login_bg_img {
+            width: 100%;
+            height: 700px;
+        }
+
+        .with-errors span {
+            font-size: 15px;
+            font-weight: bold;
+            color: #FF0000;
+        }
+    </style>
+{% endblock %}
 {% block main %}
     <div id="login_wrap" style="position: relative">
         <div class="simple_logo">
-            <a href=""><img src="/static/img/site/simple_logo.png"></a>
+            <a href="/"><img src="/static/img/site/simple_logo.png"></a>
         </div>
 
         <img class="login_bg_img" src="/static/img/site/login_bg.jpg">
@@ -19,7 +33,7 @@
                 <div>
                     {% if msg %}
                         <div class="form-group  w3 w3l">
-                            <div class="help-block with-errors">{{ msg }}</div>
+                            <div class="help-block with-errors"><span>{{ msg }}</span></div>
                         </div>
                     {% endif %}
                 </div>
