--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<div style="position: ">
+<div style="position:relative ">
     <div id="footer" class="footer">
 
         <div id="footer_ensure" class="footer_ensure">
