--- a/apps/shop_order/templates/confirm.html
+++ b/apps/shop_order/templates/confirm.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>确认订单</title>
 </head>
 <body>
-
+<p class="con_p"></p>
 </body>
 </html>
