--- a/apps/user/templates/register_page.html
+++ b/apps/user/templates/register_page.html
@@ -17,7 +17,7 @@
     </style>
 {% endblock %}
 {% block title %}
-    天猫注册
+    书城注册
 {% endblock %}
 {% block main %}
     <div class="simple_logo">
